--- a/config.toml
+++ b/config.toml
@@ -118,7 +118,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     img = "bigteam.jpg"
     alt = "The Benefits, Barriers, and Risks of Big-Team Science"
     title = "The Benefits, Barriers, and Risks of Big-Team Science"
-    subtitle = "Study published on the challenges that psychology faces and how big team science has the potential to induce great progress in psychology"
+    subtitle = "On the challenges that psychology faces and how big team science has the potential to induce great progress in psychology"
     url = "https://psyarxiv.com/2mdxh/"
     
     [[params.work.row]]
