--- a/config.toml
+++ b/config.toml
@@ -534,7 +534,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
       img = "alessandro.png"
       alt = "Alessandro"
       social = [
-        ["icon-globe", "https://www.researchgate.net/profile/Alessandro_Sparacio"]
+        ["icon-globe", "https://www.researchgate.net/profile/Alessandro_Sparacio"],
         ["icon-linkedin", "https://www.linkedin.com/in/alessandro-sparacio-451473112/"],
         ["icon-twitter", "https://twitter.com/Alessan09558632"]
       ]
