--- a/config.toml
+++ b/config.toml
@@ -622,7 +622,23 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
    img = "capi.jpg"
    alt = "Catherine Pinatelle"
    social = [["icon-globe"]]
-
+   
+   [[params.about.item]]
+    name = '<a href="">Xuanning Zhang</a>'
+    position = "Intern"
+    description = "Undergraduate student at UGA, join the lab as an intern to study social thermoregulation and data analytics."
+    img = "xuanning.jpg"
+    alt = "Xuanning Zhang"
+    social = [["icon-globe"]]
+    
+    [[params.about.item]]
+    name = '<a href="">Ronan Bellemin</a>'
+    position = "MA student"
+    description = "Ba in psychology at UGA. Will study emotions across different relationships via skin body temperature."
+    img = "ronan.png"
+    alt = "Ronan Bellemin"
+    social = [["icon-globe"]]
+    
    [[params.about.item]]
     name = '<a href="">Anthony Dall’agnola-Bombier</a>'
     position = "Developer"
